# NCP

./: .gitignore  .mailmap  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INTEGRATING.md  KNOWN_LIMITATIONS.md  LICENSE  LICENSE-APACHE  NEST_REALTIME.md  NEUROMORPHIC.md  NEURO_CYBERNETIC_PROTOCOL.md  PERFORMANCE.md  PLASTICITY.md  RATIONALE.md  README.md  RELEASE_READINESS.md  RESILIENCE.md  REVIEW_AND_PLAN.md  ROADMAP.md  SECURITY.md  VERSIONING.md  buf.gen.yaml  buf.yaml  package.json
.github/workflows/: ci.yml  release.yml
conformance/: README.md
conformance/baseline/v0.5.0/: wire_manifest.json
conformance/baseline/v0.5.0/schemas/: README.md  capabilities.schema.json  close_session.schema.json  command_frame.schema.json  control_status.schema.json  index.json  link_status.schema.json  observation_frame.schema.json  open_session.schema.json  run_request.schema.json  sensor_frame.schema.json  session_closed.schema.json  session_opened.schema.json  step_request.schema.json  stimulus_frame.schema.json
conformance/baseline/v0.5.0/vectors/: capabilities.json  close_session.json  command_frame.json  control_status.json  link_status.json  observation_frame.json  open_session.json  run_request.json  sensor_frame.json  session_closed.json  session_opened.json  step_request.json  stimulus_frame.json
conformance/vectors/: capabilities.json  close_session.json  command_frame.json  control_status.json  link_status.json  observation_frame.json  open_session.json  run_request.json  sensor_frame.json  session_closed.json  session_opened.json  step_request.json  stimulus_frame.json
deploy/: README.md  zenoh-access-control.json5
docs/plots/data/: README.md
e2e/: README.md  nest_five_networks.py  run_cross_language_e2e.py
ncp-core/: Cargo.toml  README.md
ncp-core/bindings/: Capabilities.ts  ChannelSpec.ts  ChannelValue.ts  CloseSession.ts  CommandFrame.ts  EntityBinding.ts  EntityRef.ts  EntityRole.ts  LinkStatus.ts  Mode.ts  NetworkRef.ts  NetworkRefKind.ts  Observable.ts  Observation.ts  ObservationFrame.ts  OpenSession.ts  README.md  RecordSpec.ts  RecordTarget.ts  Role.ts  RunRequest.ts  SafetyLimits.ts  SensorFrame.ts  SessionClosed.ts  SimConfig.ts  SimMode.ts  SimProvenance.ts  StimulusFrame.ts  StimulusKind.ts  StimulusSpec.ts  StimulusTarget.ts  index.ts
ncp-core/examples/: ncp_tcp_client.rs  overhead.rs  uav_control_safety.rs
ncp-core/src/: bulk.rs  bus.rs  codec.rs  keys.rs  lib.rs  messages.rs  resilience.rs  safety.rs  transport.rs
ncp-core/tests/: behavior_conformance.rs  conformance.rs
ncp-cpp/: Cargo.toml  README.md
ncp-cpp/examples/: demo.cpp
ncp-cpp/include/: ncp.h
ncp-cpp/src/: lib.rs
ncp-cpp/tests/: behavior_corpus.rs  corpus.rs
ncp-gateway/: Cargo.toml  README.md
ncp-gateway/src/: main.rs
ncp-python/: Cargo.toml  README.md  build.rs  pyproject.toml
ncp-python/src/: lib.rs
ncp-ts/: README.md  package.json  tsconfig.json
ncp-ts/scripts/: check-behavior.mjs  sync-bindings.mjs
ncp-ts/src/: client.ts  index.ts  ws.ts
ncp-zenoh/: Cargo.toml  README.md
ncp-zenoh/examples/: uav_drone_loop.rs
ncp-zenoh/src/: lib.rs
ncp-zenoh/tests/: cross_session_rpc.rs  loopback.rs  safety_governor_over_wire.rs
proto/: README.md  ncp.proto
schemas/: README.md  capabilities.schema.json  close_session.schema.json  command_frame.schema.json  control_status.schema.json  index.json  link_status.schema.json  observation_frame.schema.json  open_session.schema.json  run_request.schema.json  sensor_frame.schema.json  session_closed.schema.json  session_opened.schema.json  step_request.schema.json  stimulus_frame.schema.json
scripts/: README.md  bench_chunk_overhead.py  bench_gil_overlap.py  bench_overlap.py  bench_realtime.py  check-consumer-pins.sh  check-version-coherence.sh  check.sh  check_acl_template.py  check_conformance_vectors.py  check_proto_schema_parity.py  check_wire_baseline.py  gen_diagrams.py  plot_perf.py  repin-ncp.sh  verify_nest_chunking.py
