# Neuro-Control Protocol (NCP) — Rust reference SDK (workspace).
#
# NCP is a versioned, transport-agnostic, project-agnostic standard for letting an
# Engram-driven NEST simulation serve external robot / UAV / simulation systems
# (perception, action, both, or neither). This Rust workspace is the **normative
# reference implementation** — the protocol is meant to become a reusable standard
# (cf. MCP/ACP), and Rust is the canonical, high-performance implementation.
#
# This workspace is self-contained and **extractable**: it has no path/parent
# dependency on the surrounding Paper2Brain repo and can be lifted into its own
# repository / published to crates.io with no refactoring. Consumers (crebain,
# pid_vla, the Engram gateway) depend on `ncp-core` (+ `ncp-zenoh`) as a normal
# dependency.
#
# Crates:
#   ncp-core    — pure protocol: wire types (serde), version guard, key scheme,
#                 rate codec, safety governor, in-process bus. serde-only.
#   ncp-zenoh   — the recommended decoupled transport: Zenoh queryable (RPC) +
#                 pub/sub (perception/action/observation data planes), QoS.
#   ncp-gateway — Engram's Rust edge: runs the Zenoh bus and bridges RPC to the
#                 Python SessionService over a localhost socket (NEST stays Python).

[workspace]
resolver = "2"
members = ["ncp-core", "ncp-zenoh", "ncp-gateway", "ncp-python"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sepehrmn/ncp"
rust-version = "1.81.0"

[workspace.dependencies]
ncp-core = { path = "ncp-core", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
